syntax = "proto3";

package ic_nns_governance.pb.storage;

import "ic_nns_governance/pb/v1/governance.proto";

// The historical rewards that were provided to node providers, along with the contextual data
// needed to calculate it.
message ArchivedMonthlyNodeProviderRewards {
  // The version of the rewards data.  These versions are added to accommodate changes to the
  // rewards data structure over time.
  oneof version {
    V1 version_1 = 1;
  }

  // The first version of the stored rewards.
  message V1 {
    ic_nns_governance.pb.v1.MonthlyNodeProviderRewards rewards = 1;
  }

}
